@@ -1,3 +1,9 @@
+2009-03-05  Jeremie Dimino <jeremie@dimino.org>
+
+	* src/code/extlib/rope.mli: inverse doc of starts_with and ends_with
+
+	* src/code/extlib/rope.ml: prevent starts_with and ends_with from failing
+
 2009-03-04  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>
 
 	* src/core/extlib/extPrint.mli: More documentation.
